crates/bitnet-quantization/tests/snapshots/snapshot_wave24__w24_int4_config_asymmetric.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave24.rs
expression: cfg
---
Int4QuantConfig {
    group_size: 64,
    symmetric: false,
    block_wise: false,
}
