crates/bitnet-quantization/tests/snapshots/snapshot_wave24__w24_int4_quant_params_sample.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave24.rs
expression: params
---
Int4QuantParams {
    scales: [
        0.125,
        0.25,
    ],
    zero_points: [
        8,
        7,
    ],
    group_size: 128,
    num_groups: 2,
    symmetric: true,
}
