crates/bitnet-quantization/tests/snapshots/snapshot_wave24__w24_int8_config_asymmetric_percentile.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave24.rs
expression: cfg
---
Int8QuantConfig {
    per_channel: false,
    symmetric: false,
    calibration_method: Percentile(
        99.9,
    ),
}
