crates/bitnet-quantization/tests/snapshots/snapshot_wave24__w24_int8_config_default.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave24.rs
expression: cfg
---
Int8QuantConfig {
    per_channel: true,
    symmetric: true,
    calibration_method: MinMax,
}
