crates/bitnet-quantization/tests/snapshots/snapshot_wave24__w24_int8_quant_params_sample.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave24.rs
expression: params
---
Int8QuantParams {
    scales: [
        0.015,
        0.023,
    ],
    zero_points: [
        0,
        -3,
    ],
    min_vals: [
        -1.92,
        -2.87,
    ],
    max_vals: [
        1.88,
        2.95,
    ],
}
