crates/bitnet-quantization/tests/snapshots/snapshot_wave24__w24_lookup_table_asymmetric_2bit.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave24.rs
expression: round_tripped
---
[
    (
        -0.5,
        0,
        -0.6666667,
    ),
    (
        0.0,
        1,
        0.0,
    ),
    (
        0.5,
        2,
        0.6666667,
    ),
    (
        1.0,
        3,
        1.3333334,
    ),
    (
        1.5,
        3,
        1.3333334,
    ),
]
