crates/bitnet-quantization/tests/snapshots/snapshot_wave24__w24_lookup_table_symmetric_2bit.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave24.rs
expression: round_tripped
---
[
    (
        -1.0,
        1,
        -1.0,
    ),
    (
        -0.5,
        2,
        0.0,
    ),
    (
        0.0,
        2,
        0.0,
    ),
    (
        0.5,
        3,
        1.0,
    ),
    (
        1.0,
        3,
        1.0,
    ),
]
