crates/bitnet-quantization/tests/snapshots/snapshot_wave24__w24_nibble_packed_odd_length.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave24.rs
expression: "(packed.len, &packed.data, &unpacked)"
---
(
    3,
    [
        213,
        2,
    ],
    [
        5,
        -3,
        2,
    ],
)
