crates/bitnet-quantization/tests/snapshots/snapshot_wave24__w24_nibble_packed_round_trip.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave24.rs
expression: "(packed.len, &packed.data, &unpacked)"
---
(
    8,
    [
        241,
        195,
        135,
        32,
    ],
    [
        1,
        -1,
        3,
        -4,
        7,
        -8,
        0,
        2,
    ],
)
